[gd_scene load_steps=11 format=3 uid="uid://sgl44boffmsf"]

[ext_resource type="Texture2D" uid="uid://df7pcvc8u0ug1" path="res://characters/Talon/sprite_sheets/noBKG_KnightIdle_strip.png" id="1_0nicr"]
[ext_resource type="Script" path="res://characters/Talon/talon.gd" id="1_duwv8"]
[ext_resource type="PackedScene" uid="uid://2evhn0npdxi4" path="res://ui/focus_default.tscn" id="4_mrfi8"]
[ext_resource type="PackedScene" uid="uid://bno3iriedun4j" path="res://characters/base_character_sprite.tscn" id="5_ei5uc"]
[ext_resource type="PackedScene" uid="uid://bdecc7cdnjbaj" path="res://skills/skill.tscn" id="6_jmp5k"]
[ext_resource type="PackedScene" uid="uid://cyi2g62l2egia" path="res://characters/character_stats.tscn" id="7_d0o7f"]

[sub_resource type="Animation" id="Animation_x6vl1"]
length = 0.001

[sub_resource type="Animation" id="Animation_fe73s"]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(100, 1, 1, 1), Color(1, 1, 1, 1), Color(100, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4eibr"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fabj"]
_data = {
"RESET": SubResource("Animation_x6vl1"),
"hurt": SubResource("Animation_fe73s"),
"idle": SubResource("Animation_4eibr")
}

[node name="Talon" type="Node2D"]
script = ExtResource("1_duwv8")

[node name="BaseSprite" parent="." instance=ExtResource("5_ei5uc")]
texture = ExtResource("1_0nicr")
hframes = 15

[node name="IngressEnergy" type="ProgressBar" parent="."]
self_modulate = Color(0.0313726, 1, 0.0352941, 1)
offset_left = -8.0
offset_top = -25.0
offset_right = 66.0
offset_bottom = 2.0
scale = Vector2(0.2, 0.2)
value = 100.0

[node name="Focus" parent="." instance=ExtResource("4_mrfi8")]
visible = false
z_index = 5
position = Vector2(5, 7)

[node name="CharacterStats" parent="." instance=ExtResource("7_d0o7f")]
label = "Knight"
max_ingress_energy = 10.0
current_ingress_energy = 10.0
incursion_power = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6fabj")
}

[node name="Skills" type="Node" parent="."]

[node name="EthIncursionSmall" parent="Skills" instance=ExtResource("6_jmp5k")]
label = "Eth Incursion (small)"
ingress_energy_cost = 1
element = 1
description = "Open a small Eth incursion and damage one foe"

[node name="EthRefrainSmall" parent="Skills" instance=ExtResource("6_jmp5k")]
id = 1
label = "Eth Refrain (small)"
ingress_energy_cost = 1
element = 1
type = 1
description = "Block a single small attack"

[connection signal="no_ingress_energy" from="CharacterStats" to="." method="_on_character_stats_no_ingress_energy"]
[connection signal="took_damage" from="CharacterStats" to="." method="_on_character_stats_took_damage"]
[connection signal="used_skill" from="CharacterStats" to="." method="_on_character_stats_used_skill"]
